# aura-snn-rag

./: .gitignore  .tmp_infer.py  .tmp_infer_old.py  .tmp_keys.py  .tmp_shapes.py  MODEL_CARD.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_PROMPT.md  README-github.md  README-model-card.md  README.md  TODO.md  aura_nemotron_cc2_pretraining.py  colab_l4_training.py  inspect_checkpoint.py  notebookforaura.py  prepare_full_dataset.py  prepare_vocab_dataset.py  pyproject.toml  test_generation_local.py  test_inference.py  test_local_training.py  test_output.txt  test_runner.py  test_snn_rag.py  training_recipes.md  verify_hippocampal_model.py  verify_keys.py
benchmarks/: ablation_moe_routing.py  bench_energy_tracking.py  bench_goemotion_e2e.py  bench_moe_routing.py  bench_moe_routing_refined.py
docs/: ARCHITECTURE.md  LANGUAGE_ZONE_SPECS.md  TRAINING_FIXES.md  TRAINING_OPTIMIZATION.md
notebooks/: hippocampal_training.ipynb  phase1_core_lm.ipynb  phase2_memory_seeding.ipynb  phase3_specialists.ipynb  phase4_continuous_learning.ipynb  snn_language_zone_demo.ipynb
scripts/: README.md  benchmark_prosody.py  run_tests.py  train_colab.py  train_emotion_head.py  tune_prosody_hyperparameters.py  visualize_prosody.py
src/: fix_imports.py
tests/: conftest.py  demo_interactive_hippocampus.py  demo_mnist_hippo_campal_live.py  pytest.ini  test_brain.py  test_brain_hippocampus_integration.py  test_emotion_head.py  test_fast_hash_embedder.py  test_hippocampal_formation.py  test_hippocampal_index.py  test_hippocampal_visualization.py  test_ingestion_and_gating.py  test_izhikevich.py  (+17 more)
(+116 files in other folders)
